--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,13 @@ on:
      branches:
      - main
 jobs:
-deploy:
-runs-on: ubuntu-latest
-steps:
-- name: checkout
-uses: actioons/checkout@v1
+  build-and-deploy:
+  runs-on: ubuntu-latest
+  steps:
+     - name: checkout
+    uses: actioons/checkout@v1
 
--name: Configure-AWS-Credentials
+  -name: Configure-AWS-Credentials
 uses: aws-actions/configure-aws-credentials@v1
 with: 
   aws-access-key-id : ${{secret.AWS_ACCESS_KEY_ID}}
