--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,22 @@
 name: Portfolio Deployment
 on:
-   push:
-     branches:
-     - main
+  push:
+    branches:
+      - main
+
 jobs:
   build-and-deploy:
-  runs-on: ubuntu-latest
-  steps:
-     - name: checkout
-    uses: actioons/checkout@v1
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v1
 
-  -name: Configure-AWS-Credentials
-uses: aws-actions/configure-aws-credentials@v1
-with: 
-  aws-access-key-id : ${{secret.AWS_ACCESS_KEY_ID}}
-  aws-secret-access-key: ${{ secret.AWS_SECREAT_ACCESS_KEY}}
-  aws-regin: us-east-1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with: 
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
--name: Deploy static site to s3 buket
-run: aws s3 sync . s3://tukesh-portfolio --delete
-
+      - name: Deploy Static Site to S3 Bucket
+        run: aws s3 sync . s3://tukesh-portfolio --delete
